terraform/modules/network/subnets.tf
resource "aws_subnet" "public" {

  count = 2

  vpc_id = aws_vpc.main.id

  cidr_block = cidrsubnet("10.0.0.0/16", 8, count.index)

  map_public_ip_on_launch = true

}

resource "aws_subnet" "private" {

  count = 2

  vpc_id = aws_vpc.main.id

  cidr_block = cidrsubnet("10.0.0.0/16", 8, count.index + 10)

}
